# NativeCrashDemo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/chalilayang/com/nativecrashdemo/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/chalilayang/nativecrashdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: breakpad_jni.cpp  customlog.h  native-lib.cpp  native_crash_handler.cpp
app/src/main/cpp/coffeecatch/: coffeecatch.c  coffeecatch.h
app/src/main/java/chalilayang/com/nativecrashdemo/: MainActivity.java  NativeCrashHandler.java  NativeDemoApplication.java
app/src/main/java/com/chalilayang/nativecrashdemo/: BreakpadWrapper.java  MainActivity.java  NativeCrashHandler.java  NativeDemoApplication.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/chalilayang/com/nativecrashdemo/: ExampleUnitTest.java
app/src/test/java/com/chalilayang/nativecrashdemo/: ExampleUnitTest.java
breakpadLib/: build.gradle
breakpadLib/src/main/cpp/: CMakeLists.txt  customlog.h
breakpadLib/src/main/cpp/breakpad/: CMakeLists.txt  breakpad_jni.cpp
breakpadLib/src/main/cpp/breakpad-master/: CMakeLists.txt  breakpad_jni.cpp
breakpadLib/src/main/cpp/breakpad-master/src/client/linux/handler/: exception_handler.cc  exception_handler.h
breakpadLib/src/main/cpp/breakpad/client/: minidump_file_writer.cc
breakpadLib/src/main/cpp/breakpad/client/linux/crash_generation/: crash_generation_client.cc  crash_generation_client.h
breakpadLib/src/main/cpp/breakpad/client/linux/dump_writer_common/: thread_info.h  ucontext_reader.cc
breakpadLib/src/main/cpp/breakpad/client/linux/handler/: exception_handler.cc  minidump_descriptor.h
breakpadLib/src/main/cpp/breakpad/client/linux/minidump_writer/: cpu_set.h  directory_reader.h  line_reader.h  linux_dumper.cc  linux_dumper.h  linux_ptrace_dumper.cc  minidump_writer.cc  minidump_writer.h  proc_cpuinfo_reader.h
breakpadLib/src/main/cpp/breakpad/common/: memory_allocator.h
breakpadLib/src/main/cpp/breakpad/common/linux/: file_id.cc  file_id.h  memory_mapped_file.cc  safe_readlink.cc
breakpadLib/src/main/cpp/breakpad/google_breakpad/common/: minidump_exception_mac.h  minidump_format.h
breakpadLib/src/main/java/com/breakpad/: BreakpadWrapper.java
gen-libs/: build.gradle
gen-libs/src/main/cpp/: CMakeLists.txt
gen-libs/src/main/cpp/breakpad/: CMakeLists.txt  breakpad_jni.cpp
gen-libs/src/main/cpp/breakpad/client/: minidump_file_writer.cc
gen-libs/src/main/cpp/breakpad/client/linux/crash_generation/: crash_generation_client.cc
gen-libs/src/main/cpp/breakpad/client/linux/dump_writer_common/: mapping_info.h  raw_context_cpu.h
gen-libs/src/main/cpp/breakpad/client/linux/handler/: exception_handler.cc  exception_handler.h  minidump_descriptor.h
gen-libs/src/main/cpp/breakpad/client/linux/microdump_writer/: microdump_writer.cc
gen-libs/src/main/cpp/breakpad/client/linux/minidump_writer/: directory_reader.h  minidump_writer.cc
gen-libs/src/main/cpp/breakpad/common/: memory_allocator.h
gen-libs/src/main/cpp/breakpad/common/linux/: guid_creator.h  memory_mapped_file.cc  safe_readlink.cc
gen-libs/src/main/cpp/gmath/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
nativelibrary/: CMakeLists.txt  build.gradle
nativelibrary/src/androidTest/java/chalilayang/com/nativelibrary/: ExampleInstrumentedTest.java
nativelibrary/src/androidTest/java/com/chalilayang/nativelibrary/: ExampleInstrumentedTest.java
nativelibrary/src/main/: AndroidManifest.xml
nativelibrary/src/main/cpp/: native-crash.cpp
nativelibrary/src/main/cpp/breakpad/: CMakeLists.txt
nativelibrary/src/main/java/chalilayang/com/nativelibrary/: NativeCrashTest.java
nativelibrary/src/main/java/com/chalilayang/nativelibrary/: NativeCrashTest.java
nativelibrary/src/main/res/values/: strings.xml
nativelibrary/src/test/java/chalilayang/com/nativelibrary/: ExampleUnitTest.java
nativelibrary/src/test/java/com/chalilayang/nativelibrary/: ExampleUnitTest.java
